alignments fixed

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -276,7 +276,7 @@ width: 28em;
 /* contact form */
 .contact-sec{
     width: 50vh;
-    margin-top: 1.3em;
+
 }
 
 .icon-info{
@@ -296,13 +296,11 @@ width: 28em;
     border-radius: 5px;
     background-color: #ffffff;
     margin-top: 1em;
-    margin-left: 10em;
+
 }
 
 .apps{
-    margin-left: 9.3em;
-    margin-top: 0.3em;
-    
+
 }
 
 .app-links{
@@ -318,7 +316,7 @@ width: 28em;
 .contact-form-sec{
     width: 50vh;
     margin-top: 2em;
-    padding-left:10em ;
+
     color: #000;
 }
 
@@ -326,7 +324,7 @@ width: 28em;
     margin: 0.3em;
     height: 3em;
     border-radius: 0.3em;
-    padding-left: 1em;
+
     border: transparent;
 }
 
@@ -334,14 +332,14 @@ width: 28em;
     margin: 0.3em;
     height: 3em;
     border-radius: 0.3em;
-    padding-left: 1em;
+
     border: transparent;
 }
 
 #message{
     margin: 0.3em;
     border-radius: 0.3em;
-    padding-left: 1em;
+
     padding-top: 0.5em;
     height: 8em;
     border: transparent;
@@ -353,7 +351,7 @@ width: 28em;
     color: #066180;
     font-size: small;
     border-radius: 0.4em;
-    margin-left: -10.5em;
+
     border: transparent;
     box-shadow: 2px 2px 10px 0px #a3cbd9;
 }
@@ -362,7 +360,7 @@ width: 28em;
     font-family: Marck Script;
     width: 100%;
     height: 2em;
-    margin-left: 1em;
+
     display: flex;
     justify-content: center;
     font-size: x-large;
